--- a/webform_GIT/Web.config
+++ b/webform_GIT/Web.config
@@ -9,6 +9,9 @@
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
+  <connectionStrings>
+    <add name="cnStr" connectionString="Data Source=LAPTOP-BNT62ELT;Initial Catalog=Kaveri;Integrated Security=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
