--- a/webform_GIT/webform_GIT.csproj
+++ b/webform_GIT/webform_GIT.csproj
@@ -67,16 +67,37 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\CSS\bootstrap-grid.css" />
+    <Content Include="Content\CSS\bootstrap-grid.min.css" />
+    <Content Include="Content\CSS\bootstrap-reboot.css" />
+    <Content Include="Content\CSS\bootstrap-reboot.min.css" />
+    <Content Include="Content\CSS\bootstrap.css" />
+    <Content Include="Content\CSS\bootstrap.min.css" />
+    <Content Include="Content\JavaScript\Bootstrap.js" />
     <Content Include="Global.asax" />
+    <Content Include="Home.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Home.aspx.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Home.aspx.designer.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\CSS\bootstrap-grid.css.map" />
+    <Content Include="Content\CSS\bootstrap-grid.min.css.map" />
+    <Content Include="Content\CSS\bootstrap-reboot.css.map" />
+    <Content Include="Content\CSS\bootstrap-reboot.min.css.map" />
+    <Content Include="Content\CSS\bootstrap.css.map" />
+    <Content Include="Content\CSS\bootstrap.min.css.map" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
